--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: SocraticDev
+name: Socratic Development
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/blog"
+baseurl: "/SocraticDevBlog"
 
 #
 # !! You don't need to change any of the configuration flags below !!
