--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: jesmith026/jekyll-now
+  github: jesmith026/SocraticDevBlog
   instagram:
   linkedin:
   pinterest:
