--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Socratic Development
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Aspiring Solutions Architect from Dallas, TX
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/jesmith026/jekyll-now/master/images/jekyll-logo.png
@@ -17,20 +17,12 @@ avatar: https://raw.githubusercontent.com/jesmith026/jekyll-now/master/images/je
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
+  email: jesmith026@outlook.com
   github: jesmith026/SocraticDevBlog
-  instagram:
-  linkedin:
-  pinterest:
+  linkedin: https://www.linkedin.com/in/socraticdev/
   rss: # just type anything here for a working RSS icon
   twitter: 
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
-
+  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"# channel/<your_long_string> or user/<user-name>
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -41,7 +33,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://www.socraticdev.net
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
