--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://raw.githubusercontent.com/jesmith026/jekyll-now/master/images/je
 footer-links:
   email: jesmith026@outlook.com
   github: jesmith026/SocraticDevBlog
-  linkedin: https://www.linkedin.com/in/socraticdev/
+  linkedin: socraticdev
   rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"# channel/<your_long_string> or user/<user-name>
