--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Socratic Development
 description: Aspiring Solutions Architect from Dallas, TX
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/jesmith026/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/jesmith026/jekyll-now/master/images/global/ManTheCodeLogo.jpg
 
 #
 # Flags below are optional
